--- a/manifests/setup/prometheus/application/prometheus/prometheus.yaml
+++ b/manifests/setup/prometheus/application/prometheus/prometheus.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: prometheus
+  labels:
+    app.kubernetes.io/instance: prometheus
 #  annotations:
 #    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
 ---
