--- a/manifests/setup/prometheus/rbac/rbac.yaml
+++ b/manifests/setup/prometheus/rbac/rbac.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: prometheus
+  labels:
+    app.kubernetes.io/instance: prometheus
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
