Changed Service spec to LoadBalancer

--- a/manifests/setup/prometheus/service/prometheus.yaml
+++ b/manifests/setup/prometheus/service/prometheus.yaml
@@ -11,4 +11,5 @@ spec:
     targetPort: web
   selector:
     app.kubernetes.io/name: prometheus
-  sessionAffinity: ClientIP
+  sessionAffinity: None
+  type: LoadBalancer
