--- a/manifests/setup/prometheus/application/prometheus/prometheus.yaml
+++ b/manifests/setup/prometheus/application/prometheus/prometheus.yaml
@@ -1,7 +1,7 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: prometheus
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: monitoring
 
 #  annotations:
 #    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
@@ -23,7 +23,7 @@ spec:
           recurse: true
   destination:
       server: https://kubernetes.default.svc
-      namespace: prometheus
+      namespace: monitoring
 
   syncPolicy:
       # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
