--- a/manifests/setup/prometheus/prom-deployment/prometheus.yaml
+++ b/manifests/setup/prometheus/prom-deployment/prometheus.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: Prometheus
 metadata:
   name: prometheus
+  namespace: monitoring
   labels:
     app: prometheus
 spec:
