--- a/manifests/setup/prometheus/serviceMonitor/prometheus_servicemonitor.yaml
+++ b/manifests/setup/prometheus/serviceMonitor/prometheus_servicemonitor.yaml
@@ -2,6 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: prometheus-self
+  namespace: monitoring
   labels:
     app: prometheus
 spec:
