Fixed application manifest

--- a/manifests/setup/prometheus/application/prometheus/prometheus.yaml
+++ b/manifests/setup/prometheus/application/prometheus/prometheus.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: prometheus
+  name: monitoring
 
 #  annotations:
 #    elbv2.k8s.aws/pod-readiness-gate-inject: enabled
@@ -16,14 +16,14 @@ metadata:
 spec:
   project: default
   sources:
-    - repoURL: git@github.com:matiss-baldonis/kube-prometheus.git
+    - repoURL: git@github.com:matiss-baldonis/kube-prometheus-operator.git
       path: manifests/setup
       targetRevision: HEAD
       directory:
           recurse: true
   destination:
       server: https://kubernetes.default.svc
-      namespace: default
+      namespace: monitoring
 
   syncPolicy:
       # automated sync by default retries failed attempts 5 times with following delays between attempts ( 5s, 10s, 20s, 40s, 80s ); retry controlled using `retry` field.
