Switched targetRevision to main

--- a/manifests/setup/prometheus/application/prometheus/prometheus.yaml
+++ b/manifests/setup/prometheus/application/prometheus/prometheus.yaml
@@ -18,7 +18,7 @@ spec:
   sources:
     - repoURL: git@github.com:matiss-baldonis/kube-prometheus-operator.git
       path: manifests/setup
-      targetRevision: HEAD
+      targetRevision: main
       directory:
           recurse: true
   destination:
